# ESP32S3_Project

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_SPEC.md  SERVER_AUDIT.md  sdkconfig  sdkconfig.old
components/app_config/: CMakeLists.txt  app_config.cpp
components/app_shell/: CMakeLists.txt  app_shell.cpp
components/bsp_board/: CMakeLists.txt  bsp_board.cpp
components/bsp_io_expander/: CMakeLists.txt  bsp_io_expander.cpp
components/service_ai/: CMakeLists.txt  service_ai.cpp
components/service_audio/: CMakeLists.txt  service_audio.cpp
components/service_cloud/: CMakeLists.txt  service_cloud.cpp
components/service_log/: CMakeLists.txt  service_log.cpp
components/service_network/: CMakeLists.txt  service_network.cpp
components/service_power/: CMakeLists.txt  service_power.cpp
components/service_storage/: CMakeLists.txt  service_storage.cpp
components/service_time/: CMakeLists.txt  service_time.cpp
components/ui/: CMakeLists.txt  ui.cpp  ui_router.cpp
components/ui/include/: ui.h  ui_page_layout.h  ui_pages.h  ui_router.h
components/ui/pages/: ui_page_about.cpp  ui_page_ai_voice.cpp  ui_page_debug.cpp  ui_page_home.cpp  ui_page_layout.cpp  ui_page_placeholder.cpp  ui_page_settings.cpp
components/user_app/: user_app.cpp
esp-ai-terminal-server/: .env.example  .gitignore  README.md  SERVER_COMMANDS.md  requirements.txt
esp-ai-terminal-server/app/: __init__.py  main.py
esp-ai-terminal-server/scripts/: asr_smoke_test.py  local_pack.sh  remote_check.sh  remote_run_dev.sh  (+2 more)
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
(+36 files in other folders)
